[incbuilder] fixed dirty java files generation
Change-Id: I7f8991aba4a7c8b26bb88da7d913bfc1527beffa